Set JDK version to 13, update project dependencies, bump version